# leveled-signal-proc

./: .gitignore  .python-version  Cargo.toml  Makefile  README.md  aa-sample.json
assets/: visualize-all-lsdl-examples.sh
assets/benchmark/: data_gen.py  poc-analysis.awk  poc-cir.txt  run.sh  tlb-analysis.awk
assets/data/: aa-sample.json  app-analytics-metrics-demo-input.jsonl  app-metrics-demo-input.jsonl  experiment-demo-input.jsonl  video-metrics-demo-input.jsonl
assets/data-generators/: data_gen4app.py  data_gen4video.py  gen_utils.py
assets/ideas-and-materials-for-future-dev/: Ideas-and-Plans.md  nestable_schema.py  schema-for-experimental-demo.json  types.json
assets/lsdl-example-expanded/: app-combined.expanded.rs  cidr.expanded.rs  eventcount.expanded.rs  playtime.expanded.rs
benchmark/: poc-playtime.txt  run.sh  tlb-analysis.awk  tlb2-cir.txt  tlb2-playtime.txt
data/: aa-sample.json  state-machine.json
demos/app-analytics/: Cargo.toml
demos/app-analytics/metrics/: app_startup.py  const.py  end.py  first_video_attempt.py  metrics-def.py  network_request.py  page_load.py  schema.py  scope.py  start.py  user_active_time.py
demos/app-analytics/src/: main.rs
demos/experiment/: Cargo.toml  build.rs
demos/experiment/metrics/: const.py  first_video_attempt.py  metrics-def.py  schema.py  scope.py
demos/experiment/src/: main.rs
demos/video-metrics/: Cargo.toml  build.rs
demos/video-metrics/metrics/: const.py  metrics-def.py  schema.py
demos/video-metrics/src/: main.rs
examples/: aa-example.rs  tlb2-dag.rs
examples/app-analytics/: build.rs
examples/app-analytics/metrics/: metrics-def.py
examples/video-metrics/: Cargo.toml
examples/video-metrics/metrics/: const.py  metrics-def.py
examples/video-metrics/src/: main.rs
lsdl/: MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
lsdl-build/: Cargo.toml  lsdl
lsdl-build/src/: lib.rs
lsdl/dev-playground/: general_schema.py
lsdl/examples/: Makefile  app_combine.py  app_combined.py  cidr.json  cidr.py  earliest_event_to_state.py  event_count.py  eventcount.json  eventcount.py  playtime.json  playtime.py
lsdl/lsdl/: __init__.py  column_type.py  component.py  componet_base.py  config.py  const.py  debug_info.py  ir.py  lsp_model_component.py  measurement.py  modules.py  prelude.py  rust_code.py  schema.py  signal.py
lsdl/lsdl/lsp_model/: __init__.py  component_base.py  componet_base.py  core.py  internal.py  rust_keywords.ini  schema.py
lsdl/lsdl/measurements/: __init__.py  diff.py  duration.py  duration_true.py  linear_change.py  peek.py
lsdl/lsdl/measurements/combinators/: __init__.py  binary.py  mapper.py  scope.py
lsdl/lsdl/processors/: __init__.py  accumulator.py  combinators.py  filter.py  generators.py  latch.py  liveness.py  mapper.py  sliding_window.py  state_machine.py
lsdl/lsdl/signal_processors/: __init__.py  accumulator.py  latch.py  liveness.py  signal_gen.py  signal_mapper.py  state_machine.py
lsdl/timeline-operators/: dag.py  operators.py  playtime.yaml
lsp-codegen/: Cargo.toml
lsp-codegen-test/: Cargo.toml  build.rs
lsp-codegen-test/src/: app-combined.rs  cidr.rs  earliest_event_to_state.rs  event_count.rs  eventcount.rs  lib.rs  main.rs  playtime.rs
lsp-codegen-test/src/cidr/: main.rs
lsp-codegen/src/: context.rs  lib.rs  metrics.rs  node.rs  processing.rs  schema.rs
lsp-component/: Cargo.toml
lsp-component/src/: lib.rs
lsp-component/src/measurements/: change.rs  combinator.rs  diff.rs  duration.rs  linear_change.rs  mod.rs  peek.rs
lsp-component/src/measurements/combinator/: binary.rs  mapper.rs  mod.rs  scope.rs
lsp-component/src/measurements/durations/: duration_of_current_level.rs  duration_since_become_true.rs  duration_since_last_level.rs  duration_true.rs  mod.rs
lsp-component/src/processors/: accmulator.rs  accumulator.rs  counter.rs  duration.rs  generator.rs  latch.rs  liveness.rs  mapper.rs  mod.rs  sliding_window.rs  state_machine.rs
lsp-component/src/processors/latches/: edge_triggered_latch.rs  level_triggered_latch.rs  mod.rs  retention.rs
lsp-ir/: Cargo.toml  cargo.toml
lsp-ir/src/: lib.rs
lsp-ir/src/verifier/: main.rs
lsp-ir/src/visualize/: main.rs
lsp-ir/verifier/: main.rs
lsp-macro/: Cargo.toml
lsp-macro/src/: lib.rs
lsp-macro/src/patch/: derivation_info.rs  mod.rs
lsp-runtime/: Cargo.toml
lsp-runtime/examples/: aa-example.rs  cir-dag.rs  state-machine.rs  time-ratio-example.rs  tlb2-dag.rs
lsp-runtime/src/: checkpoint.rs  context.rs  instrument.rs  internal_queue.rs  lib.rs  measurement.rs  moment.rs  multipeek.rs  signal.rs  signal_api.rs
lsp-runtime/src/context/: input_signal_bag.rs  internal_queue.rs  lsp_context.rs  mod.rs  multipeek.rs
src/: context.rs  internal_queue.rs  lib.rs  main.rs  measurement.rs  moment.rs  multipeek.rs  signal.rs  update_queue.rs
video-metrics-demo/: Cargo.toml  build.rs
video-metrics-demo/metrics/: metrics-def.json  metrics-def.py
video-metrics-demo/src/: main.rs
