[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "time-series-proc"
path = "src/bin/main.rs"

[dependencies]
chrono = {version = "0.4.24", features = ["serde"]}
serde = {version = "1.0.158", features = ["derive"]}
serde_json = {version = "1.0.94"}
itertools = "0.10.5"

[profile.release]
debug = true
