[workspace]
members = ["lsp-runtime", "lsp-component", "lsp-ir", "lsp-codegen", "lsp-codegen-test", "lsdl-build", "examples/video-metrics", "examples/app-analytics"]

[profile.release]
debug = false
strip = true
lto = "fat"

[profile.cpu-profiling]
inherits = "release"
debug = true
strip = false
lto = false
