[workspace]
members = ["lsp-runtime", "lsp-component", "lsp-ir", "lsp-codegen", "lsp-codegen-test", "lsdl-build", "demos/video-metrics", "demos/app-analytics"]
resolver = "2"

[profile.release]
debug = false
strip = true
lto = "fat"

[profile.cpu-profiling]
inherits = "release"
debug = true
strip = false
lto = "fat"
