[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "lsdl"
version = "0.5.0"
authors = [
    {name = "Hao Hou", email = "haohou302@gmail.com"},
    {name = "Jian Lan", email = "shapeless.cat@gmail.com"},
]
description = "The Leveled Signal Description Language (LSDL)"
requires-python = ">=3.12"
classifiers=[
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Windows",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools]
packages = ["lsdl", "lsdl.lsp_model", "lsdl.processors", "lsdl.measurements", "lsdl.measurements.combinators"]

[tool.setuptools.package-data]
lsdl = ["py.typed", "lsp_model/rust_keywords.ini"]

[tool.isort]
profile = "black"
