[package]
name = "lsp-codegen-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = {version = "0.4.19", features = ["serde"] }
anyhow = "1.0.42"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
[dependencies.lsp-codegen]
path = "../lsp-codegen"
[dependencies.lsp-runtime]
path = "../lsp-runtime"
[dependencies.lsp-component]
path = "../lsp-component"