[package]
name = "lsp-codegen-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = {version = "0.4.19", features = ["serde"] }
anyhow = "1.0.42"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
lsp-codegen = { path = "../lsp-codegen" }
lsp-runtime = { path = "../lsp-runtime" }
lsp-component = { path = "../lsp-component" }

[build-dependencies]
lsdl-build = { path = "../lsdl-build" }

[[bin]]
name = "lsdl-example-app-combined"
path = "src/app-combined.rs"

[[bin]]
name = "lsdl-example-cidr"
path = "src/cidr.rs"

[[bin]]
name = "lsdl-example-playtime"
path = "src/playtime.rs"

[[bin]]
name = "lsdl-example-eventcount"
path = "src/eventcount.rs"

[[bin]]
name = "lsdl-example-earliest-event-to-state"
path = "src/earliest_event_to_state.rs"
