[package]
name = "lsp-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = {version = "1.0.75", features = ["full"]}
serde_json = "1.0.72"

[dependencies.lsp-ir]
path = "../lsp-ir"

[lib]
proc-macro = true
