[package]
name = "lsp-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "verify-lsp-ir"
path = "src/verifier/main.rs"

[[bin]]
name = "lsp-ir-dot-graph"
path = "src/visualize/main.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
anyhow = "1.0"