[package]
name = "video-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-runtime = {path = "../../lsp-runtime"}
lsp-component = {path = "../../lsp-component"}
lsp-codegen = {path = "../../lsp-codegen"}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
chrono = {version = "0.4.19", features = ["serde"] }
anyhow = "1.0.42"

[build-dependencies]
lsdl-build = {path = "../../lsdl-build"}